# Qwen3-TTS-Openai-Fastapi

./: .env.example  Dockerfile  Dockerfile.base  README.md  docker-compose.yml  pyproject.toml
api/: config.py  main.py
api/backends/: factory.py  mlx_qwen3_tts.py
api/routers/: openai_compatible.py
api/services/: text_processing.py
tests/: test_backends.py  test_text_chunking.py
