[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-tts"
version = "0.1.1"
description = "Qwen-TTS python package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = { text = "Apache-2.0" }
authors = [{ name = "Alibaba Qwen Team" }]

dependencies = [
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "PyYAML>=6.0",
  "gradio",
  "librosa",
  "torchaudio",
  "soundfile",
  "sox",
  "onnxruntime",
  "einops",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart",
  "pydantic>=2.0.0",
  "inflect",
  "aiofiles",
  "pydub",
  "httpx>=0.24.0",
]
vllm = [
  "vllm>=0.4.0",
]
mlx = [
  # The 0.6B CustomVoice 8-bit MLX checkpoint
  # (``mlx-community/Qwen3-TTS-12Hz-0.6B-CustomVoice-8bit``) was
  # converted with mlx-audio 0.3.x. Both 0.3.0 and 0.3.1 pin
  # ``transformers==5.0.0rc3`` (a release candidate), which
  # conflicts with the rest of this project that pins the stable
  # ``transformers==4.57.3``. Allow ``mlx-audio>=0.3.0`` so users
  # on Apple Silicon can opt into the MLX backend by itself, in a
  # separate virtualenv from the official / vLLM / PyTorch backends
  # if they need to keep both. The ``[mlx]`` extra is only enabled
  # on macOS arm64.
  "mlx-audio>=0.3.0; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.10'",
  "huggingface_hub[hf_xet]; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.10'",
]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/Qwen/Qwen3-TTS"
Repository = "https://github.com/Qwen/Qwen3-TTS"

[project.scripts]
qwen-tts-demo = "qwen_tts.cli.demo:main"
qwen-tts-api = "api.main:main"
qwen-tts-voice-studio = "gradio_voice_studio:main"

[tool.setuptools]
packages = { find = { where = ["."] , include = ["qwen_tts*", "api*"] } }
py-modules = ["gradio_voice_studio"]
include-package-data = true

[tool.setuptools.package-data]
qwen_tts = ["py.typed", "**/*.npz"]
api = ["static/*", "static/**/*"]
